# newton-binom

./: CMakeLists.txt  README.md
script/: build.sh
src/: CMakeLists.txt  comb.cpp  comb.h  main.cpp  powi.cpp  powi.h
test/: CMakeLists.txt  combtest.cpp
test/combtest/: CMakeLists.txt  main.cpp
test/powitest/: CMakeLists.txt  main.cpp
